--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <a href="digital.html">
                     Digital Art
                 </a>
-                <a style="border-right: 1px white solid;"href="resume.html">
+                <a href="resume.html" style="border-right: 1px white solid;">
                     Resume
                 </a>
             </p>
@@ -35,6 +35,6 @@
         </div>
         <div id = "overlay"></div>
         <script src="JS/index.js" defer></script>
-        <script src="JS/dim.js" defer></script>
+        <!-- <script src="JS/dim.js" defer></script> -->
     </body>
 </html>
