--- a/about.html
+++ b/about.html
@@ -1,52 +1,23 @@
 <!DOCTYPE html>
 <html lang="en-US">
 	<head>
-		<title>That's crazy</title>
+		<title>About Me</title>
         <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
-        <link href="CSS/about.css" rel="stylesheet" type="text/css" />
+        <link href="CSS/global.css" rel="stylesheet" type="text/css" />
         
     </head>
     <body>
+        <div id="back"><a href="./">BACK</a></div>
+        <div id="under"></div>
         <div id = "text">
             <h1><span>ABOUT ME</span></h1>
         </div>
         <div id="main">
-            <div class ="box" id="b1">
-                <h2>Example Text</h2>
-                <div class="text">
-                    <p>
-                        I must not fear. Fear is the mind-killer. Fear is the little-death that brings total obliteration. I will face my fear. I will permit it to pass over me and through me. And when it has gone past I will turn the inner eye to see its path. Where the fear has gone there will be nothing. Only I will remain.
-                    </p>
-                </div>
-            </div>
-            <div  class ="box" id="b2">
-                <h2>Example Text</h2>
-                <div class="text">
-                    <p>
-                        I must not fear. Fear is the mind-killer. Fear is the little-death that brings total obliteration. I will face my fear. I will permit it to pass over me and through me. And when it has gone past I will turn the inner eye to see its path. Where the fear has gone there will be nothing. Only I will remain.
-                    </p>
-                </div>
-            </div>
-            <div class ="box"  id="b3">
-                <h2>Example Text</h2>
-                <div class="text">
-                    <p>
-                        I must not fear. Fear is the mind-killer. Fear is the little-death that brings total obliteration. I will face my fear. I will permit it to pass over me and through me. And when it has gone past I will turn the inner eye to see its path. Where the fear has gone there will be nothing. Only I will remain.
-                    </p>
-                </div>
-            </div>
-            <div class ="box"  id="b4">
-                <h2>Example Text</h2>
-                <div class="text">
-                    <p>
-                        I must not fear. Fear is the mind-killer. Fear is the little-death that brings total obliteration. I will face my fear. I will permit it to pass over me and through me. And when it has gone past I will turn the inner eye to see its path. Where the fear has gone there will be nothing. Only I will remain.
-                    </p>
-                </div>
-            </div>
+            This is where I would write something interesting about myself, but I'm not that interesting.
         </div>
         <div id="overlay">
         </div>
         <script src="JS/background.js" defer></script>
-        <script src="JS/dim.js" defer></script>
+        <!-- <script src="JS/dim.js" defer></script> -->
     </body>
 </html>
