--- a/photos.html
+++ b/photos.html
@@ -1,52 +1,35 @@
 <!DOCTYPE html>
 <html lang="en-US">
 	<head>
-		<title>That's crazy</title>
+		<title>Photography</title>
         <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
-        <link href="about.css" rel="stylesheet" type="text/css" />
+        <link href="CSS/global.css" rel="stylesheet" type="text/css" />
         
     </head>
     <body>
+        <div id="back"><a href="./">BACK</a></div>
+        <div id="under"></div>
         <div id = "text">
             <h1><span>PHOTOGRAPHY</span></h1>
         </div>
+        <div id="over">
+            <img id="i1" src="pictures/1.jpeg" alt="failed to load image">
+            <img id="i2"src="pictures/2.jpeg" alt="failed to load image">
+            <img id="i3"src="pictures/3.jpeg" alt="failed to load image">
+            <img id="i4"src="pictures/4.jpeg" alt="failed to load image">
+        </div>
         <div id="main">
-            <div class ="box" id="b1">
-                <h2>Example Text</h2>
-                <div class="text">
-                    <p>
-                        Picture goes here
-                    </p>
-                </div>
-            </div>
-            <div  class ="box" id="b2">
-                <h2>Example Text</h2>
-                <div class="text">
-                    <p>
-                        Picture goes here
-                    </p>
-                </div>
-            </div>
-            <div class ="box"  id="b3">
-                <h2>Example Text</h2>
-                <div class="text">
-                    <p>
-                        Picture goes here
-                    </p>
-                </div>
-            </div>
-            <div class ="box"  id="b4">
-                <h2>Example Text</h2>
-                <div class="text">
-                    <p>
-                        Picture goes here
-                    </p>
-                </div>
+            <div id="art">
+                <img onclick="overlay(i1)" src="pictures/1.jpeg" alt="failed to load image">
+                <img onclick="overlay(i2)" src="pictures/2.jpeg" alt="failed to load image">
+                <img onclick="overlay(i3)" src="pictures/3.jpeg" alt="failed to load image">
+                <img onclick="overlay(i4)" src="pictures/4.jpeg" alt="failed to load image">
             </div>
         </div>
-        <div id="overlay">
-        </div>
-        <script src="about.js" defer></script>
-        <script src="dim.js" defer></script>
+        <div id="overlay"></div>
+        <script>
+            document.body.style.backgroundImage = "url('pictures/"+Math.floor(Math.random()*4+1)+".jpeg')";
+        </script>
+        <script src="JS/imageclick.js" defer></script>
     </body>
 </html>
