--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
 	<head>
-		<title>That's crazy</title>
+		<title>Home</title>
         <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
         <link href="CSS/index.css" rel="stylesheet" type="text/css" />
         
