--- a/blog.html
+++ b/blog.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
 	<head>
-		<title>About Me</title>
+		<title>BLOG</title>
         <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
         <link href="CSS/global.css" rel="stylesheet" type="text/css" />
         
@@ -10,10 +10,11 @@
         <div id="back"><a href="./">BACK</a></div>
         <div id="under"></div>
         <div id = "text">
-            <h1><span>ABOUT ME</span></h1>
+            <h1><span>BLOG</span></h1>
         </div>
         <div id="main">
-            My name is Stephen Park. This is a school project, if you found this by mistake, have fun I guess. I code and take pictures for fun, I personally believe I am somewhat competent at both.
+            4 / 10 / 22 <br>
+            Photography has been simple and fun, no surprises. I look forward to taking more pictures in different places with different tools. 
         </div>
         <div id="overlay">
         </div>
