--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
                 <a href="digital.html">
                     Digital Art
                 </a>
+                <a href="blog.html">
+                    Blog
+                </a>
                 <a href="resume.html" style="border-right: 1px white solid;">
                     Resume
                 </a>
