--- a/digital.html
+++ b/digital.html
@@ -13,23 +13,24 @@
             <h1><span>DIGITAL ART</span></h1>
         </div>
         <div id="over">
-            <img id="i1" src="pictures/1.jpeg" alt="failed to load image">
-            <img id="i2"src="pictures/2.jpeg" alt="failed to load image">
-            <img id="i3"src="pictures/3.jpeg" alt="failed to load image">
-            <img id="i4"src="pictures/4.jpeg" alt="failed to load image">
+            <!-- <img id="i1" src="pictures/1.jpeg" alt="failed to load image"> -->
+            <!-- <img id="i2"src="pictures/2.jpeg" alt="failed to load image"> -->
+            <!-- <img id="i3"src="pictures/3.jpeg" alt="failed to load image"> -->
+            <!-- <img id="i4"src="pictures/4.jpeg" alt="failed to load image"> -->
         </div>
         <div id="main">
+            Nothing here... <br>Yet...
             <div id="art">
-                <img onclick="overlay(i1)" src="pictures/1.jpeg" alt="failed to load image">
-                <img onclick="overlay(i2)" src="pictures/2.jpeg" alt="failed to load image">
-                <img onclick="overlay(i3)" src="pictures/3.jpeg" alt="failed to load image">
-                <img onclick="overlay(i4)" src="pictures/4.jpeg" alt="failed to load image">
+                <!-- <img onclick="overlay(i1)" src="pictures/1.jpeg" alt="failed to load image"> -->
+                <!-- <img onclick="overlay(i2)" src="pictures/2.jpeg" alt="failed to load image"> -->
+                <!-- <img onclick="overlay(i3)" src="pictures/3.jpeg" alt="failed to load image"> -->
+                <!-- <img onclick="overlay(i4)" src="pictures/4.jpeg" alt="failed to load image"> -->
             </div>
         </div>
         <div id="overlay"></div>
         <script>
             document.body.style.backgroundImage = "url('pictures/"+Math.floor(Math.random()*4+1)+".jpeg')";
         </script>
-        <script src="JS/imageclick.js" defer></script>
+        <!-- <script src="JS/imageclick.js" defer></script> -->
     </body>
 </html>
