--- a/about.html
+++ b/about.html
@@ -13,8 +13,7 @@
             <h1><span>ABOUT ME</span></h1>
         </div>
         <div id="main">
-            My name is Stephen Park. This is a school project, if you found this by mistake, have fun I guess. I code and take pictures for fun, I personally believe I am somewhat competent at both.
-        </div>
+            My name is Stephen Park I am a human that lives in the United States somewhere. This is a school project, if you found this by mistake, have fun I guess. I code and take pictures for fun, I personally believe I am somewhat competent at both. I spend most of my days wasting my life playing games, making worthless code, and if I go outside taking pictures of what I think is nice. Also, I like doing other normal things like eating, drinking water, and listening to music. I'm not going to put anything really important here to protect my non-existent privacy that is slowly being stripped away by large data hungry corporations that break data collection laws because it's financially benefical even if they get sued because of the sheer amount of money they make.
         <div id="overlay">
         </div>
         <script src="JS/background.js" defer></script>
